# virtual_resolution

./: .gitignore  README.md  browser_launcher.py  main.py  pyproject.toml  take_screenshot.py
src/: __init__.py  browser_launcher.py  screen_detector.py
tests/: test_browser_launcher.py  test_screen_detector.py
